<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">02_StringResource1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str1">hello</string>
    <string name="str2">hoge</string>
    <string name="str3">piyo</string>
    <string name="str4">hello, world</string>
    <string name="str5">oolong tea!</string>
    <string name="str6">Today is %1$s!</string>

</resources>
