<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


	<TextView
		android:id="@+id/ja_label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str1" />

	<TextView
	    android:id="@+id/ja_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str2"
        android:layout_below="@+id/ja_label1" />

	<TextView
	    android:id="@+id/ja_label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str3"
        android:layout_below="@+id/ja_label2" />

	<TextView
	    android:id="@+id/ja_label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str4"
        android:layout_below="@+id/ja_label3" />

	<TextView
	    android:id="@+id/ja_label5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str5"
        android:layout_below="@+id/ja_label4" />
	
	<TextView
	    android:id="@+id/ja_label6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str6"
        android:layout_below="@+id/ja_label5" />
</RelativeLayout>
